# hqt

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml
.superpowers/brainstorm/45404-1775159774/content/: dashboard-layout.html  grafana-mockup.html
.superpowers/brainstorm/45404-1775159774/state/: server-stopped
docker/: Dockerfile.postgres  prometheus.yml
docs/: API_SPEC.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  MODULE_SPECS.md  PRD.md  TASK_LIST.md  system_architecture.md
docs/superpowers/plans/: 2026-04-03-hqt-final-submission.md
docs/superpowers/specs/: 2026-04-03-hqt-final-submission-design.md
module1_lob/: CMakeLists.txt  Dockerfile  NATIVE_BUILD.md  bench_threadpool.py  kraken_feeder.py  lob_api.py  lob_server.cpp  payload.json  ring_buffer.py  siege.conf  siege_urls.txt  urls.txt
module1_lob/build_native/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
module1_lob/build_native/engine/: Makefile  cmake_install.cmake
module1_lob/build_native/engine/tools/: Makefile  bench_tool  cmake_install.cmake  replay_tool
module2_timescale/: __init__.py  analytics_api.py  bench_timescale.py  fetch_real_data.py  gen_ticks.py  indicators.sql  kafka_consumer.py  live_streamer.py  smart_backfiller.py
module2_timescale/bench_out/: benchmark_timescale.csv
module3_graph/: Dockerfile  __init__.py  bellman_ford.py  edge_weight_updater.py  graph_api.py  graph_init.py  graph_queries.py
module4_quantum/: Dockerfile  benchmark_quantum.py  grover_diffuser.py  grover_oracle.py  quantum_api.py  quantum_service.py  run_grover.py
module5_security/: Dockerfile  main.py  prometheus_metrics.py  rate_limiter.py  sql_firewall.py
module5_security/grafana_provisioning/dashboards/: hqt_main.json
module5_security/grafana_provisioning/datasources/: datasources.yml
report/: demo_script.md  final_report.md  siege_ddos_results.txt
scripts/: create_kafka_topics.sh  patch_grafana.py  run_m1_benchmark.py  seed_benchmark_results.py
tests/: conftest.py  run_all_benchmarks.py  test_bellman_ford.py  test_e2e.py  test_graph.py  test_integration_e2e.py  test_lob.py  test_quantum.py  test_security.py  test_timescale.py  test_timescale_backfiller.py
